# wf-unicorn

./: .clang-format  LICENSE  README.md  meson.build
metadata/: meson.build  wf-unicorn.xml  wf-unicorn.xml.in
src/: meson.build  unicorn.cpp
